--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,67 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+
+.Main-ctn h1{
+  text-align: center;
+}
+.button-ctn
+{
+  float: right;
+  padding: 0 100px 0 0;
+}
+.app-body
+{
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+.Main-body-ctn
+{
+  width: 500px;
+  height: 300px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+}
+.Main-body-ctn li
+{
+  width: 100%;
+  height: 40px;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  list-style: mnone;
+}
+
+.sidebar-list
+{
+  width: 400px;
+  list-style: none;
+  height: 40px;
+  border: 1px solid lightgrey;
+  border-radius: 4px;
+  display: flex;
+  justify-content: space-between;
+  padding: 5px 10px 5px 10px;
+  cursor: pointer;
+  align-items: center;
+}
+
+.primary
+{
+  height: 42px;
+  border-radius: 4px;
+  background-color: white;
+  border: 1px solid lightgray;
+  cursor: pointer;
+  min-width: 100px;
+}
+
+.secondary
+{
+  color:white;
+  background-color:maroon
+}
